--- a/app/src/main/res/layout/list_neighbors_fragment.xml
+++ b/app/src/main/res/layout/list_neighbors_fragment.xml
@@ -6,14 +6,25 @@
     android:layout_height="match_parent"
     >
 
+    <Button
+        android:id="@+id/addNeighbor"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/add_neighbors"
+        android:background="@color/design_default_color_secondary"
+        >
+
+    </Button>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/neighbors_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/addNeighbor"
         tools:listitem="@layout/neighbor_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
