--- a/app/src/main/res/layout/add_neighbor.xml
+++ b/app/src/main/res/layout/add_neighbor.xml
@@ -1,113 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="24dp">
+
+    <ImageView
+        android:id="@+id/item_list_avatar"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/ic_person"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/imageContainer"
+        android:id="@+id/imageLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp">
+
+        app:layout_constraintTop_toBottomOf="@id/item_list_avatar">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/image"
+            android:hint="@string/hint_image"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/NameContainer"
+        android:id="@+id/nameLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/imageContainer"
-        >
+        app:layout_constraintTop_toBottomOf="@id/imageLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/telephone"
+            android:hint="@string/hint_name"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/PhoneContainer"
+        android:id="@+id/phoneLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/NameContainer"
-        >
+        app:layout_constraintTop_toBottomOf="@id/nameLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/nom"
+            android:hint="@string/hint_phone"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/WebsiteContainer"
+        android:id="@+id/websiteLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/PhoneContainer"
-        >
+        app:layout_constraintTop_toBottomOf="@id/phoneLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/website"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/website"
+            android:hint="@string/hint_website"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/AddressContainer"
+        android:id="@+id/adressLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/WebsiteContainer"
-        >
+        app:layout_constraintTop_toBottomOf="@id/websiteLayout">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/Address"
+            android:id="@+id/adress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/adresse"
+            android:hint="@string/hint_address"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/AboutContainer"
+        android:id="@+id/aboutLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/AddressContainer"
-        >
+        android:layout_height="70dp"
+        app:layout_constraintTop_toBottomOf="@id/adressLayout">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/About"
+            android:id="@+id/about"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:ems="10"
-            android:hint="@string/a_propos_de_moi"
+            android:hint="@string/hint_about"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/add_neighbor_button"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:text="@string/save"
+        app:layout_constraintTop_toBottomOf="@id/aboutLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:cornerRadius="24dp"
+        android:layout_marginTop="24dp">
+
+    </com.google.android.material.button.MaterialButton>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
